Fix margins on mobile

--- a/static/css/video.css
+++ b/static/css/video.css
@@ -117,6 +117,9 @@ video {
 }
 
 @media only screen and (max-width: 812px) {
+  main {
+    margin: 0;
+  }
   .videoData {
     flex-direction: column;
   }
